--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <div class="member-info">
                             <div class="member-detail">
                                 <h4>Sanjib Mohanty</h4>
-                                <span>Angular Developer</span>
+                                <span>Web Developer</span>
                             </div>
                             <div class="social">
                                 <a href="https://twitter.com/Sanjibmohanty05" target="_blank"><i class="fa fa-twitter"></i></a>
